feat(CAL-029): Neon PostgreSQL cloud database entegrasyonu
- Supabase yerine Neon kullanildi (IPv6/WSL2 uyumluluk sorunu)
- .env.example Neon ornegi ile guncellendi
- Production-ready cloud database baglantisi

--- a/.env.example
+++ b/.env.example
@@ -1,16 +1,20 @@
 # ===========================================
 # CALENDAR APP - ENVIRONMENT VARIABLES
 # ===========================================
-# Bu dosyayi .env.local olarak kopyala ve degerleri doldur:
+# Bu dosyayi .env ve .env.local olarak kopyala ve degerleri doldur:
+# cp .env.example .env
 # cp .env.example .env.local
 
 # -------------------------------------------
 # VERITABANI AYARLARI
 # -------------------------------------------
 
-# PostgreSQL Baglanti Adresi
-# Format: postgresql://KULLANICI:SIFRE@HOST:PORT/VERITABANI?schema=SCHEMA
-DATABASE_URL="postgresql://postgres:YOUR_PASSWORD@localhost:5432/calendar_db?schema=public"
+# Neon PostgreSQL (Production - Onerilen)
+# Format: postgresql://USER:PASSWORD@HOST/DATABASE?sslmode=require
+DATABASE_URL="postgresql://neondb_owner:YOUR_PASSWORD@ep-xxx-xxx.eu-central-1.aws.neon.tech/neondb?sslmode=require"
+
+# Local PostgreSQL (Development - Opsiyonel)
+# DATABASE_URL="postgresql://postgres:YOUR_PASSWORD@localhost:5432/calendar_db?schema=public"
 
 # -------------------------------------------
 # UYGULAMA AYARLARI
